fix(css): correct search button alignment in widget-search
The search button within the widget-search component was misaligned due to incorrect positioning. Updated positioning from `right: 0px;` to `left: 0px;` to ensure proper layout and functionality.

--- a/media/static/assets/css/style.css
+++ b/media/static/assets/css/style.css
@@ -4678,8 +4678,8 @@ Fixed top top bottom
 
 .widget-search .search-form .search-submit {
   position: absolute;
-  right: 0px;
   top: 0px;
+  left: 0px;
   height: 100%;
   background: transparent;
   color: #000;
